--- a/сайт.html
+++ b/сайт.html
@@ -69,6 +69,7 @@
                  <div class="p3">
                      <p class="text2">Информация</p>
                  </div>
+                 <div>123</div>
              </div>
              <div class="block4">
                 <h2 class="h22">
